--- a/section-7/7.4.md
+++ b/section-7/7.4.md
@@ -1,8 +1,8 @@
 # 7.4. “类型”声明
 
-“`type`”语句将一个字符串作为参数，这个字符串是一个`YANG`内置类型（参见[第9节](../section-9/README.md)）或派生类型（参见[7.3节](7.3.md)）的名称，后面跟着一个可选的子语句块，用于放置类型的限制。
+“`type`”语句后跟一个数据类型名字符串，这个名字字符串可以是`YANG`内置类型的（参见[第9节](../section-9/README.md)）也可以是派生类型的（参见[7.3节](7.3.md)），再后面跟着一个可选的子语句块，用于附加对类型的限制。
 
-可以应用的限制取决于受限制的类型。 所有内置类型的限制声明在[第9节](../section-9/README.md)的小节中都有描述。
+可以应用的限制规则取决于待限制的类型。 所有内置类型的可用限制声明在[第9节](../section-9/README.md)中描述。
 
 ## 7.4.1.  `type`的子语句
 
