--- a/section-7/7.5.md
+++ b/section-7/7.5.md
@@ -5,9 +5,9 @@
 容器节点自身没有值，但在数据树中有一堆子节点。 子节点在容器的子语句中定义。
 
 
-# 7.5.1. 容器及其存在性
+# 7.5.1. 普通容器与开关容器
 
-`YANG`支持两种类型的容器，一种容器仅用于组织数据节点的层次结构，另一种容器在数据树中是否存在就带有明确的意义。
+`YANG`支持两种类型的容器，一种容器仅用于组织数据节点的层次结构，另一种容器在数据树中的是否存在就带有明确意义。
 
 在第一种方式中，容器自身没有意义，只用于包含子节点。 需要特别指出的是没有子节点的容器节点在语义上和不存在该容器节点是等价的。 `YANG`称这种风格为“普通容器”(`non-presence container`)。 这是默认的类型。
 
@@ -19,9 +19,9 @@
 
 `YANG`将这种风格称为“开关容器”(`presence container`)，并使用一个“presence”声明来定义，其参数是一个文本字符串，描述节点存在时的含义。
 
-例如，“`ssh`”容器的存在可以打开通过`Secure Shell（SSH）`登录服务器的能力，但也可以用来包含`SSH`有关的配置项，例如连接速率或重试次数限制。
+例如，“`ssh`”容器的存在可以打开通过`Secure Shell（SSH）`登录服务器的能力，同时也可以用来包含`SSH`有关的配置项，例如连接速率或重试次数限制。
 
-“`presence`”语句（见[第7.5.5节](7.5.md#755-presence声明)）用于声明数据树中容器的存在性。
+“`presence`”语句（见[第7.5.5节](7.5.md#755-presence声明)）用于声明数据树中的开关容器。
 
 ## 7.5.2.  `container`的子语句
 
@@ -56,7 +56,7 @@
 
 “`must`”语句是可选的，它将一个包含`XPath`表达式的字符串作为参数（见[6.4节](../section-6/6.4.md)）。它用于声明对数据有效性的约束。约束条件按照[第8节](../section-8/README.md)的规定执行。
 
-当一个数据仓库被验证时，所有的“`must`”约束在可访问树中的每个节点上被评估一次（见[第6.4.1节](../section-6/6.4.1.md)）。
+当一个数据仓库被验证时，所有的“`must`”约束在可访问树中的每个节点上被概念性地评估一次（见[第6.4.1节](../section-6/6.4.1.md)）。
 
 所有这些约束必须评估为“`true`”，才能判定数据有效。
 
@@ -116,7 +116,7 @@ container interface {
 }
 ```
 
-## 7.5.5. “存在性”(`presence`)声明
+## 7.5.5. “开关容器”(`presence`)声明
 
 “`presence`”语句为数据树中容器的是否存在赋予一个含义。 它以一个字符串作为参数，该字符串描述节点存在的含义。
 
