--- a/section-7/7.6.md
+++ b/section-7/7.6.md
@@ -1,20 +1,20 @@
 # 7.6. “叶”声明
 
-“`leaf`”语句用于在模式树中定义叶节点。 它需要一个参数，它是一个标识符，后面是一个包含详细叶子信息的子状态块。
+“`leaf`”语句用于在模型树中定义叶节点。 它有一个标识符参数，后面跟一个包含详细叶子信息的子语句块。
 
 叶节点在数据树中有一个值，但没有子节点。 从概念上讲，数据树中的值始终是规范形式（参见[第9.1节](../section-9/9.1.md)）。
 
-数据树中存在零个或一个实例的叶节点。
+叶节点在数据树中存在零个或一个实例。
 
-“`leaf`”语句用于定义特定内置或派生类型的标量变量。
+“`leaf`”语句用于声明一个内置或派生类型的单个变量。
 
 ## 7.6.1. 叶子的默认值
 
-如果叶子不存在于数据树中，叶子的默认值就是服务器使用的值。缺省值的使用取决于架构树中不是不存在容器的树叶最近的祖先节点（请参阅[第7.5.1节](7.5.md#751-容器的存在)）：
+如果叶子不存在于数据树中，服务器就使用叶子的默认值。缺省值的使用情况取决于模型树中叶子最近的祖先节点是否为开关容器节点 （请参阅[第7.5.1节](7.5.md#751-容器的存在)）：
 
-- 如果模式树中不存在这样的祖先，则必须使用默认值。
+- 如果模型树中不存在这样的祖先(开关容器)，则必须使用默认值。
 
-- 否则，如果这个祖先是个案例节点，如果数据树中存在任何案例的节点，或者案例节点是选择的默认案例，并且数据中不存在任何其他案例的节点，则必须使用默认值树。
+- 否则，如果这个祖先是个选择分支节点，如果数据树中存在同属本分支的任何节点，或者分支节点是所属选择节点的默认分支同时数据树中不存在任何其他分支的节点，则必须使用默认值。
 
 - 否则，如果祖先节点存在于数据树中，则必须使用默认值。
 
