--- a/section-7/7.6.md
+++ b/section-7/7.6.md
@@ -1,8 +1,8 @@
 # 7.6. “叶”声明
 
-“`leaf`”语句用于在模型树中定义叶节点。 它的参数就一个标识符，后面跟一个包含叶子详细信息的子语句块。
+“`leaf`”语句用于在模型树中定义叶子节点。 它的参数是一个标识符，后面跟一个包含叶子详细信息的子语句块。
 
-叶节点在数据树中有一个值，但没有子节点。 从概念上讲，数据树中的值始终是规范形式（参见[第9.1节](../section-9/9.1.md)）。
+叶节点在数据树中有取值，但没有子节点。 从概念上讲，数据树中叶子的取值始终是规范形式的（参见[第9.1节](../section-9/9.1.md)）。
 
 叶节点在数据树中存在零个或一个实例。
 
@@ -12,7 +12,7 @@
 
 如果叶子不存在于数据树中，服务器就使用叶子的默认值。缺省值的使用情况取决于模型树中叶子最近的祖先节点是否为开关容器节点 （请参阅[第7.5.1节](7.5.md#751-容器的存在)）：
 
-- 如果模型树中不存在这样的祖先(开关容器)，则必须使用默认值。
+- 如果模型树中不存在这样的祖先节点(开关容器)，则必须使用默认值。
 
 - 否则，如果这个祖先是个选择分支节点，如果数据树中存在同属本分支的任何节点，或者没有其他分支的任何节点但本分支是默认分支，则必须使用默认值。
 
