--- a/section-7/7.7.md
+++ b/section-7/7.7.md
@@ -1,8 +1,8 @@
 # 7.7. “叶列表”声明
 
-在使用“`leaf`”语句定义特定类型的简单标量变量的情况下，“`leaf-list`”语句用于定义特定类型的数组。 “`leaf-list`”语句带有一个参数，这个参数是一个标识符，后面是一个包含叶列表信息的子语句块。
+参照 “`leaf`”语句定义简单的单个变量，“`leaf-list`”语句用于来定义数组变量。 其参数是一个标识符，后面跟一个包含叶列表信息的子语句块。
 
-在配置数据中，叶列表中的值必须是唯一的。
+在配置数据中，叶列表中列出的值必须是唯一的。
 
 默认值的定义不能用“`if-feature`”语句来标记。
 
@@ -10,13 +10,13 @@
 
 ## 7.7.1. 排序
 
-`YANG`支持两种样式来排序列表和叶列表中的条目。在许多列表中，列表条目的顺序不会影响列表配置的实现，服务器可以按任何合理的顺序自由排列列表条目。列表的“`description`”字符串可能会向服务器实现者建议一个排序。`YANG`将这种风格称为“系统排序(`system ordered`)”这样的列表用“`ordered-by system`”的语句表示。
+`YANG`支持两种方式来排序列表和叶列表中的条目。在多数情况下，列表条目的顺序不会影响配置，服务器可以按任何合理的顺序自由排列这些条目。列表的“`description`”字符串可能会向服务器实现者建议一个排序。`YANG`将这种风格称为“系统排序(`system ordered`)”这样的列表用“`ordered-by system`”来声明。
 
 例如，有效用户列表通常会按字母顺序排序，因为用户在配置中出现的顺序不会影响用户帐户的创建。
 
-在其他样式的列表中，列表条目的顺序对于列表配置的实现是重要的，并且用户负责对条目进行排序，而服务器维持该顺序。`YANG`称这种风格的“用户排序(`user ordered`)”的名单;这样的列表用“按用户排序(`ordered-by user`)”的语句表示。
+在另一种方式中，列表条目的顺序对于列表配置的实现是重要的，并且用户负责对条目进行排序，而服务器保持该顺序。`YANG`称这种风格为“用户排序(`user ordered`)”;这样的列表用“`ordered-by user`”来声明。
 
-例如，数据包筛选器条目应用于传入流量的顺序可能会影响该流量被过滤的方式。用户需要决定是否应该在过滤条目之前或之后应用丢弃所有`TCP`流量的过滤条目，以允许来自可信接口的所有流量。排序的选择是至关重要的。
+例如，数据包过滤器条目应用于流量的顺序可能会影响该流量被过滤的方式。用户需要决定是否在“过滤掉不可信端口”之前或之后应用“丢弃所有TCP流量”，以允许来自可信接口的所有流量。排序的选择是至关重要的。
 
 `YANG`在`NETCONF`的`<edit-config>`操作中提供了丰富的功能，可以控制用户排序列表中列表条目的顺序。列表条目可以被插入或重新排列，被定位为列表中的第一个或最后一个条目，或被定位在另一个特定条目之前或之后。
 
@@ -24,21 +24,21 @@
 
 ## 7.7.2. 叶列表的默认值
 
-如果数据树中不存在叶列表，则叶列表的缺省值是服务器使用的值。缺省值的使用取决于架构树中不是无状态容器的叶节点最近的祖先节点（参见[7.5.1节](7.5.md#751-容器的存在)）：
+如果数据树中不存在叶列表，则叶列表的缺省值是服务器使用的值。缺省值的使用取决于模型树中叶列表节点最近的祖先节点是否为“开关容器”节点（参见[7.5.1节](7.5.md#751-普通容器与开关容器)）：
 
-- 如果模式树中不存在这样的祖先，则必须使用默认值。
+- 如果模型树中不存在这样的祖先，则必须使用默认值。
 
-- 否则，如果这个祖先是一个`case`节点，如果数据树中有任何节点存在于数据树中，或者`case`节点是选择的缺省情况，并且数据中没有任何其他情况的节点，则必须使用默认值树。
+- 否则，如果这个祖先是一个分支节点，如果有任何本分支中的节点存在于数据树中，或者没有任何其他分支中的节点存在但本分支节点是选择节点的缺省分支，则必须使用默认值。
 
 - 否则，如果祖先节点存在于数据树中，则必须使用默认值。
 
 在这些情况下，默认值被认为正在使用中。
 
-请注意，如果叶列表或其任何祖先具有“​​`when`”条件或“`if-feature`”表达式的计算结果为“`false`”，则默认值不会被使用。
+请注意，如果叶列表或其任何祖先的“`when`”条件或“`if-feature`”表达式的计算结果为“`false`”，则默认值不会被使用。
 
-当使用默认值时，服务器必须在操作上表现得像数据树中存在的叶表一样，其默认值是其值。
+当使用默认值时，服务器必须在操作上表现得像数据树中存在的叶列表一样，其默认值是其值。
 
-如果叶列表具有一个或多个“`default`”语句，叶列表的默认值是“`default`”语句的值，并且如果叶列表是用户排序的，则默认值按照“`default`”语句。否则，如果叶列表的类型有一个默认值，并且叶列表没有一个值大于或等于1的“`min-elements`”语句，那么叶列表的默认值是该类型的一个实例默认值。在所有其他情况下，叶列表没有任何默认值。
+如果叶列表具有一个或多个“`default`”声明，叶列表的默认值是“`default`”语句的值，并且如果叶列表是用户排序的，则默认值按照“`default`”语句顺序排序。否则，如果叶列表的类型有一个默认值，并且叶列表没有一个取值大于等于1的“`min-elements`”声明，那么叶列表的默认值是该类型的一个默认值。在所有其他情况下，叶列表没有任何默认值。
 
 ## 7.7.3. `leaf-list`子语句
 
@@ -64,31 +64,31 @@
 
 ## 7.7.4. 叶列表的“`default`”声明
 
-“`default`”语句是可选的，它将一个字符串作为参数，该字符串包含叶列表的默认值。
+“`default`”语句是可选的，它的参数是一个字符串，该字符串包含叶列表的默认值。
 
-“`default`”语句的值必须根据叶列表的“`type`”语句中指定的类型有效。
+“`default`”语句的值必须是叶列表的“`type`”语句中指定类型的有效值。
 
-在“`min-elements`”的值大于或等于1的节点上，“`default`”语句不能出现。
+在“`min-elements`”的值大于或等于1的叶列表节点上，“`default`”语句不能出现。
 
 ## 7.7.5. “最小元素”声明
 
-“`min-elements`”语句是可选的，它将一个非负整数作为参数，对有效列表条目进行约束。 一个有效的叶列表或者列表必须至少有`min`元素条目。
+“`min-elements`”语句是可选的，它将一个非负整数作为参数，对有效列表条目进行约束。 一个有效的叶列表或者列表必须至少有多少个条目。
 
 如果不存在“`min-elements`”语句，则默认为零。
 
-约束的行为取决于模式树中叶列表或列表最近的祖先节点的类型，它不是一个不存在的容器（见[7.5.1节](7.5.md#751-容器的存在)）：
+约束的行为取决于模型树中叶列表或列表最近的祖先节点是否为“开关容器”（见[7.5.1节](7.5.md#751-容器的存在)）：
 
-- 如果模式树中不存在这样的祖先，则强制约束。
+- 如果模型树中不存在这样的祖先，则强制约束。
 
-- 否则，如果这个祖先是一个`case`节点，那么如果这个`case`的任何其他节点存在，这个约束就会被执行。
+- 否则，如果这个祖先是一个分支节点，那么如果这个分支中的任何其他节点存在，这个约束就会被执行。
 
 - 否则，如果祖先节点存在，则强制执行。
 
-根据[第8节](../section-8/README.md)的规定，约束条件得到了进一步的执行。
+在[第8节](../section-8/README.md)的规范中，此约束有更多的描述。
 
 ## 7.7.6. “最大元素”声明
 
-“`max-elements`”语句是可选的，它将一个正整数或字符串“`unbounded`”作为参数，对有效的列表条目进行约束。一个有效的叶列表或列表总是至多有最大元素条目。
+“`max-elements`”语句是可选的，它将一个正整数或字符串“`unbounded`”作为参数，对列表条目进行有效性约束。限定一个叶列表或列表至多有多少条目。
 
 如果不存在“`max-elements`”语句，则默认为“`unbounded`”。
 
@@ -96,19 +96,19 @@
 
 ## 7.7.7. “排序”声明
 
-“ordered-by”语句定义列表中的条目顺序是由用户还是系统确定的。 参数是字符串“`system`”或“`user`”之一。 如果不存在，则默认为“`system`”。
+“ordered-by”语句定义列表中的条目顺序是由用户还是系统确定的。 参数取值是字符串“`system`”或“`user`”之一。 如果不存在，则默认为“`system`”。
 
 如果列表代表状态数据，`RPC`输出参数或通知内容，则该语句将被忽略。
 
 更多信息见[7.7.1](7.7.md#771-排序)节。
 
-### 7.7.7.1. 基于系统的排序
+### 7.7.7.1. 系统默认排序
 
-列表中的条目按照系统确定的顺序排序。 列表的“`description`”字符串可能会向服务器实现者建议一个命令。如果没有，则可以按照任何顺序自由地对条目进行排序。一个实现应该使用相同的顺序来处理相同的数据，而不管数据是如何创建的。使用确定性顺序将使用简单工具（比如“`diff`”）进行比较。
+列表中的条目按照系统确定的顺序排序。 列表的“`description`”字符串可能会向服务器实现者提供建议。如果没有，则可以按照任何顺序自由地对条目进行排序。一个实现应该使用相同的顺序来处理相同的数据，而不管数据是如何创建的。使用确定性顺序将使比较工具（比如“`diff`”）工作的更好。
 
 这是默认的顺序。
 
-### 7.7.7.2. 基于用户的排序
+### 7.7.7.2. 用户指定排序
 
 列表中的条目按照用户定义的顺序排序。在`NETCONF`中，这个顺序是通过在`<edit-config>`请求中使用特殊的`XML`属性来控制的。细节见[7.7.9节](7.7.md#779-NETCONF-edit-config操作)。
 
@@ -118,27 +118,27 @@
 
 每个叶列表项的值根据类型被编码为`XML`，并作为元素中的字符数据被发送。
 
-如果叶列表是“`ordered-by user`”，则表示叶列表项的`XML`元素必须以用户指定的顺序出现; 否则，顺序依赖于实现。 表示叶列表项的`XML`元素可以与叶列表的同级元素交织，除非叶列表定义了`RPC`或动作输入(`action input`)或输出参数(`output parameters`)。
+如果叶列表是“`ordered-by user`”，则表示叶列表项的`XML`元素必须以用户指定的顺序出现; 否则，顺序依赖于实现。 表示叶列表项的`XML`元素可以与叶列表同级的兄弟节点元素交织，除非叶列表是用来定义 `RPC`或动作的输入输出参数的。
 
 参见[7.7.10节](7.7.md#7710-使用示例)的例子。
 
 ## 7.7.9. `NETCONF` `<edit-config>`操作
 
-叶列表条目可以通过使用叶列表条目的XML元素中的“`operation`”属性，通过`<edit-config>`创建和删除，但不能修改。
+叶列表条目可以在`<edit-config>`中通过表达叶列表条目的XML元素中的“`operation`”属性来创建和删除，但不能修改。
 
-在“`ordered-by user`”的叶列表中，`YANG` `XML`命名空间（[第5.3.1节](../section-5/5.3.1.md)）中的属性“`insert`”和“`value`”可以用来控制叶列表中插入条目的位置。这些可以在“`create`”操作期间用于插入新的叶列表条目，或者在“`merge`”或“`replace`”操作期间插入新的叶列表条目或移动现有的叶列表条目。
+在“`ordered-by user`”的叶列表中，使用`YANG` `XML`命名空间（[第5.3.1节](../section-5/5.3.1.md)）中的定义的属性“`insert`”和“`value`”可以用来控制在叶列表中插入条目的位置。这些可以在“`create`”操作期间用于插入新的叶列表条目，或者在“`merge`”或“`replace`”操作期间插入新的叶列表条目或移动现有的条目。
 
-“`insert`”属性可以取值“`first`”，“`last`”，“`before`”和“`after`”。如果值是“`before`”或“`after`”，那么“`value`”属性也必须用于指定叶列表中的现有条目。
+“`insert`”属性可以取值“`first`”，“`last`”，“`before`”和“`after`”。如果值是“`before`”或“`after`”，那么“`value`”属性也必须同时使用以指定叶列表中的现有条目。
 
 如果在“`create`”操作中没有“`insert`”属性，则默认为“`last`”。
 
 如果在“`ordered-by user`”叶列表中的几个条目在同一个`<edit-config>`请求中被修改，则按照请求中的`XML`元素的顺序一次修改一个条目。
 
-在具有覆盖整个叶列表的“`merge`”操作的`<copy-config>`或`<edit-config>`中，叶列表顺序与请求中XML元素的顺序相同。
+在`<copy-config>`或`<edit-config>`中的涉及整个叶列表的replace操作中，叶列表顺序与请求中XML元素的顺序相同。
 
 当一个`NETCONF`服务器处理一个`<edit-config>`请求时，叶列表节点的过程元素如下：
 
-- 如果操作是“`merge`”或“`replace`”，则叶列表条目如果不存在则创建。
+- 如果操作是“`merge`”或“`replace`”，不存在则创建。
 
 - 如果操作是“`create`”，则创建叶列表条目（如果不存在）。如果叶列表项已经存在，则返回“`data-exists`”错误。
 
