--- a/section-7/7.9.md
+++ b/section-7/7.9.md
@@ -1,8 +1,8 @@
 # 7.9. “选择”声明
 
-“`choice`”语句定义了一组可以互相替代的分支，在一个数据树中只能出现其中一个。其参数是一个标识符，后面跟着一个包含详细选择信息的子语句块。 该标识符用于标识模型树中的选择节点。 数据树中不存在选择节点。
+“`choice`”语句定义了一组相互替代关系的分支，在一个数据树中只能出现其中一个分支。其参数是一个标识符，后面跟着一个包含详细选择信息的子语句块。 该标识符仅用于标识模型树中的选择节点，在数据树中并不存在选择节点。
 
-一个选择由若干分支组成，每个分支都由一个“`case`”子语句定义。 每个分支都包含一些子节点。 一次只能选择一个分支中的节点同时存在。
+一个选择由若干分支组成，每个分支都由一个“`case`”子语句定义。 每个分支都包含一些子节点。 一次只能选择一个分支中的节点。
 
 由于在数据树中，任何时候只能选择一个分支中的节点，所以从一个分支创建一个节点会隐式地删除所有其他分支中定义的节点。 如果一个请求是创建一个分支中的节点，服务器将删除在其他分支下定义的所有现有节点。
 
@@ -35,9 +35,9 @@
 
 “`case`”语句用于定义选择的分支。 它的参数是一个标识符，后面跟着一个包含详细信息的子语句块。
 
-标识符用于标识模型树中的`case`节点。 数据树中不存在`case`节点。
+标识符仅用于标识模型树中的分支节点。 数据树中并不存在分支节点。
 
-在“`case`”语句中，可以使用“`anydata`”，“`anyxml`”，“`choice`”，“`container`”，“`leaf`”，“`list`”，“`leaf-list`”和“`uses`”语句来定义子节点到`case`节点。 在选择的所有分支下，所有这些子节点的标识符必须是唯一的。 例如，以下是非法的：
+在“`case`”语句中，可以使用“`anydata`”，“`anyxml`”，“`choice`”，“`container`”，“`leaf`”，“`list`”，“`leaf-list`”和“`uses`”语句来定义子节点到`case`节点。 在属于一个选择节点的所有分支节点下，所有这些子节点的标识符必须是唯一的。 例如，以下是非法的：
 
 ```YANG
 choice interface-type {     // 这个例子是非法的YANG
@@ -50,7 +50,7 @@ choice interface-type {     // 这个例子是非法的YANG
 }
 ```
 
-作为简写，如果分支包含单个“`anydata`”，“`anyxml`”，“`choice`”，“`container`”，“`leaf`”，“`list`”或“`leaf-list`”语句，则可以省略“`case`”语句。 在这种情况下，`case`节点仍然存在于模型树中，其标识符与子节点的标识符相同。 模型节点标识符（[6.5节](../section-6/6.5.md)）必须总是明确地包含节点标识符。 下面的例子：
+作为简写，如果分支仅包含单个“`anydata`”，“`anyxml`”，“`choice`”，“`container`”，“`leaf`”，“`list`”或“`leaf-list`”语句，则可以省略“`case`”语句。 在这种情况下，`case`节点仍然存在于模型树中，其标识符与子节点的标识符相同。 模型节点标识符（[6.5节](../section-6/6.5.md)）必须总是明确地包含节点标识符。 下面的例子：
 
 ```YANG
 choice interface-type {
@@ -95,7 +95,7 @@ choice interface-type {
 
 ## 7.9.3. 选择的“`default`”声明
 
-如果没有来自任何选择分支的子节点存在，则“`default`”语句指示是否应用默认分支。参数是默认的“`case`”语句的标识符。如果“`default`”语句缺失，则没有默认分支。
+如果没有来自任何选择分支的子节点存在，则默认使用“`default`”语句标记的分支。参数是默认的分支语句的标识符。如果“`default`”语句缺失，则没有默认分支。
 
 “`default`”语句不能出现在“`mandatory`”为“`true`”的choice节点内。
 
@@ -103,7 +103,7 @@ choice interface-type {
 
 在默认分支下，不能有任何必选节点（[第3节](../section-3/README.md)）。
 
-分支下的节点的缺省值只有当该分支下的一个节点存在或者该分支是默认分支的情况下才会使用。如果本分支中没有任何节点存在，并且也不是默认分支，则忽略本分支中子节点的默认值。
+分支下的节点的缺省值只有当该分支下的一个节点存在或者该分支是默认分支的情况下才会使用。否则忽略本分支中子节点的默认值。
 
 在本例中，选项默认为“`interval`”，如果没有“`daily`”，“`time-of-day`”或“`manual`”，则使用默认分支。 如果“`daily`”存在，则“`time-of-day`”的默认值会被使用。
 
