--- a/section-7/7.10.md
+++ b/section-7/7.10.md
@@ -1,18 +1,18 @@
 # 7.10. “`anydata`”声明
 
-“`anydata`”语句在模式树中定义一个内部节点。它需要一个参数，它是一个标识符，后面是一个包含详细`anydata`信息的子状态块。
+“`anydata`”语句在模型树中定义一个内部节点。它的参数是一个标识符，后面跟一个包含详细`anydata`信息的子语句块。
 
-“`anydata`”语句用于表示可以用`YANG`建模的未知节点集合，但`anyxml`除外，但是在模块设计时不知道数据模型。对于任何数据内容的数据模型，虽然不是必需的，但是可以通过协议信令或本文档范围之外的其他手段来获知。
+“`anydata`”语句用于表示在模块设计时不知道数据模型但可以用`YANG`建模的未知节点集合，除了`anyxml`。对于anydata涉及的具体数据模型，可能的手段之一是通过协议内容感知，这些方式不在本文档范围之内。
 
-`anydata`可能有用的示例是在设计时不知道具体通知的收到通知的列表。
+`anydata`一个有用的示例是报文中含有一个通知列表，但在设计时并不知道会收到哪些通知（notification）。
 
 `anydata`节点不能被扩充（见[7.17节](7.17.md)）。
 
-一个`anydata`节点存在于数据树的零个或一个实例中。
+一个`anydata`节点在数据树有零个或一个实例。
 
-一个实现可能会或可能不知道用于建模`anydata`节点的特定实例的数据模型。
+一个实现可能知道或不知道用于建模`anydata`节点的特定实例的数据模型。
 
-由于`anydata`的使用限制了内容的操作，所以不应该使用“`anydata`”语句来定义配置数据。
+由于`anydata`的使用限制了对其内容的操作，所以不应该使用“`anydata`”语句来定义配置数据。
 
 ## 7.10.1. `anydata`的子语句
 
@@ -33,7 +33,7 @@
 
 ## 7.10.2. `XML`编码规则
 
-一个`anydata`节点被编码为一个`XML`元素。 元素的本地名称是`anydata`的标识符，其名称空间是模块的`XML`名称空间（请参阅[第7.1.3节](7.1.md#713-namespace声明)）。 `anydata`节点的值是一组节点，它们被编码为`anydata`元素的`XML`子元素。
+一个`anydata`节点被编码为一个`XML`元素。 元素的名称是`anydata`的标识符，其名称空间是模块的`XML`名称空间（请参阅[第7.1.3节](7.1.md#713-namespace声明)）。 `anydata`节点的值是一组节点，它们被编码为`anydata`元素的`XML`子元素。
 
 ## 7.10.3. `NETCONF` `<edit-config>`操作
 
@@ -43,9 +43,9 @@
 
 当`NETCONF`服务器处理`<edit-config>`请求时，`anydata`节点的过程元素如下所示：
 
-- 如果操作是“`merge`”或“`replace`”，则创建该节点（如果该节点不存在），并将其值设置为`XML RPC`数据中找到的`anydata`节点的子元素。
+- 如果操作是“`merge`”或“`replace`”，则创建该节点（如果该节点不存在），并将其值设置为报文中对应的`anydata`节点的子元素。
 
-- 如果操作是“`create`”，则创建该节点（如果该节点不存在），并将其值设置为`XML RPC`数据中找到的`anydata`节点的子元素。 如果节点已经存在，则返回“`data-exists`”错误。
+- 如果操作是“`create`”，则创建该节点（如果该节点不存在），并将其值设置为报文中对应的`anydata`节点的子元素。 如果节点已经存在，则返回“`data-exists`”错误。
 
 - 如果操作是“`delete`”，则该节点将被删除（如果存在）。 如果节点不存在，则返回“`data-missing`”错误。
 
