--- a/section-7/7.11.md
+++ b/section-7/7.11.md
@@ -1,16 +1,16 @@
 # 7.11. “`anyxml`”声明
 
-“`anyxml`”语句在模式树中定义一个内部节点。它需要一个参数，它是一个标识符，后面是一个包含`anyxml`信息的子状态块。
+“`anyxml`”语句用于在模型树中定义一个内部节点。它的参数是一个标识符，后面跟一个包含详细描述信息的子语句块。
 
-“`anyxml`”语句用于表示未知的`XML`块。 `XML`没有限制。例如，在`RPC`回复中这可能很有用。 `NETCONF`中的`<get-config>`操作中的`<filter>`参数就是一个例子。
+“`anyxml`”语句用于表示未知的`XML`块。 `XML`上没有限制。例如，在`RPC`响应中这个会很有用。 `NETCONF`的`<get-config>`操作中的`<filter>`参数就是一个例子。
 
 `anyxml`节点不能被扩充（见[7.17节](7.17.md)）。
 
-数据树中的零个或一个实例中存在`anyxml`节点。
+数据树中`anyxml`节点可以存在零个或一个实例。
 
-由于使用`anyxml`限制了对内容的操作，所以不应该使用“`anyxml`”语句来定义配置数据。
+由于`anyxml`限制了对内容的操作，所以不应使用“`anyxml`”定义配置数据。
 
-应该指出的是，在`YANG`版本`1`中，“`anyxml`”是唯一可以模拟未知数据层次的声明。在很多情况下，这个未知的数据层次实际上是在`YANG`中建模的，但具体的`YANG`数据模型在设计时并不知道。在这些情况下，建议使用“`anydata`”（[第7.10节](7.10.md)）而不是“`anyxml`”。
+应该指出的是，在`YANG`版本`1`中，“`anyxml`”是唯一可以声明未知的结构化数据的语句。在很多情况下，这个未知的结构化数据实际上是在`YANG`中建模的，但具体的模型在设计时并不知道。在这些情况下，建议使用“`anydata`”（[第7.10节](7.10.md)）而不是“`anyxml`”。
 
 ## 7.11.1. `anyxml`子语句
 
@@ -33,15 +33,15 @@
 
 一个`anyxml`节点被编码为一个`XML`元素。 元素的本地名称是`anyxml`的标识符，其名称空间是模块的XML名称空间（请参阅[第7.1.3节](7.1.md#713-namespace声明)）。 `anyxml`节点的值被编码为这个元素的XML内容。
 
-请注意，编码中使用的任何`XML`前缀对于每个实例编码都是本地的。 这意味着相同的`XML`可能会被不同的实现编码。
+请注意，编码中使用的任何`XML`前缀对于每个实例都是本地的。 这意味着相同的`XML`在不同的实现中可以编码不同。
 
 ## 7.11.3. `NETCONF` `<edit-config>`操作
 
-`anyxml`节点被视为不透明的数据块。 这些数据只能被整体修改。
+`anyxml`节点被视为不透明的数据块。 这些数据只能被做为整体操作。
 
 `NETCONF`服务器忽略`anyxml`节点子元素上的任何“`operation`”属性。
 
-当`NETCONF`服务器处理`<edit-config`>请求时，`anyxml`节点的过程元素如下所示：
+当`NETCONF`服务器处理`<edit-config`>请求时，`anyxml`节点的处理过程如下所示：
 
 - 如果操作是“`merge`”或“`replace`”，则创建该节点（如果该节点不存在），并将其值设置为`XML RPC`数据中找到的`anyxml`节点的`XML`内容。
 
