--- a/section-7/7.12.md
+++ b/section-7/7.12.md
@@ -1,18 +1,18 @@
-# 7.12. "分组"声明
+# 7.12. "组定义"声明
 
-“`grouping`”语句用于定义一个可重用的节点块，这些节点可以在模块或子模块中本地使用，也可以根据[第5.5节](../section-5/5.5.md)中的规则使用其他模块。它需要一个参数，它是一个标识符，后面是一个包含详细分组信息的子语句块。
+“`grouping`”语句用于定义一个可重用的节点块，这种块可以在本模块或子模块使用，也可以在根据[第5.5节](../section-5/5.5.md)中的规则被导入到其他模块中使用。它的参数是一个标识符，后面是一个包含详细节点定义信息的子语句块。
 
-“`grouping`”语句不是一个数据定义语句，因此，它不定义模式树中的任何节点。
+“`grouping`”语句不是一个数据定义语句，因此，它不在模型树中定义任何节点。
 
-分组就像传统编程语言中的“结构(`structure`)”或“记录(`record`)”。
+分组就像传统编程语言中的“结构体(`structure`)”或“记录(`record`)”。
 
-一旦定义了分组，就可以在“`uses`”语句中引用它(参见[7.13](7.13.md))。一个分组不能引用自己，也不能直接或间接地通过其他分组。
+一旦定义了组，就可以在“`uses`”语句中引用它(参见[7.13](7.13.md))。一个组定义不能引用自己，不能直接或间接地（通过其他分组的引用链）引用到自己。
 
 如果分组是在`YANG`模块或子模块的顶层定义的，那么分组的标识符必须在模块中是唯一的。
 
-分组不仅仅是一种文本替换的机制;它还定义了一个节点集合。在分组中出现的标识符相对于定义分组的作用域，而不是在使用的位置。前缀映射、类型名称、分组名称和扩展使用都在“`grouping`”语句出现的层次结构中进行了评估。对于扩展，这意味着将直接子定义为“`grouping`”语句的扩展被应用到分组本身。
+组定义不是简单的文本替换的机制;它还定义了一个节点集合。在分组中出现的标识符解析时使用的是定义处的作用域，而不是使用处的。前缀映射、类型名称、组定义名称和扩展使用都在“`grouping`”语句出现的层次结构中进行评估。对于扩展，这意味着“`grouping`”的直接子语句定义的扩展是应用到组定义自身的。
 
-注意，如果一个分组在它的层次结构中定义了一个动作或一个通知节点，那么它就不能在所有的上下文中使用。例如，它不能在`rpc`定义中使用。参见[第7.15](7.15.md)和[7.16节](7.16.md)。
+注意，如果一个组定义在它的内部定义了一个动作或一个通知节点，那么它就不能在所有的上下文中使用。例如，它不能在`rpc`定义中使用。参见[第7.15](7.15.md)和[7.16节](7.16.md)。
 
 ## 7.12.1. `grouping`子语句
 
